infra/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: registry.local
    http:
      paths:
      - path: /
        backend:
          serviceName: reg-service
          servicePort: 5000
  - host: ui.registry.local
    http:
      paths:
      - backend:
          serviceName: reg-ui-service
          servicePort: 80
  - host: app.local
    http:
      paths:
      - path: /
        backend:
          serviceName: static-service
          servicePort: 80
      - path: /api
        backend:
          serviceName: cmd-service
          servicePort: 9000
  tls:
    - hosts:
      - registy.local
      secretName: docker-tls
